<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_txt"
            android:textColor="@android:color/white"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_txt"
            android:textColor="@android:color/white"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/phoneTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_txt"
            android:textColor="@android:color/white"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPhonetic"
            android:textColor="@android:color/white"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/userTypeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_type_text"
            android:textColor="@android:color/white"
            android:textSize="20dp"/>

        <RadioGroup
            android:id="@+id/typeRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/generalRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/general_radio"
                android:textColor="@android:color/white"
                android:textSize="20dp"/>

            <RadioButton
                android:id="@+id/seniorRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/senior_radio"
                android:textColor="@android:color/white"
                android:textSize="20dp"/>
        </RadioGroup>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_button" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>